User now has Roles directly on it
Removed Permission Object