@@ -1,9 +1,12 @@
 package ca.magex.crm.hazelcast.service;
 
+import java.util.List;
+
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
+import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.context.ActiveProfiles;
@@ -13,11 +16,14 @@ import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import com.hazelcast.core.HazelcastInstance;
 
 import ca.magex.crm.api.MagexCrmProfiles;
+import ca.magex.crm.api.crm.PersonSummary;
 import ca.magex.crm.api.exceptions.ItemNotFoundException;
+import ca.magex.crm.api.roles.User;
 import ca.magex.crm.api.services.CrmOrganizationService;
 import ca.magex.crm.api.services.CrmPersonService;
 import ca.magex.crm.api.services.CrmUserService;
 import ca.magex.crm.api.system.Identifier;
+import ca.magex.crm.api.system.Status;
 import ca.magex.crm.test.TestConfig;
 
 @RunWith(SpringJUnit4ClassRunner.class)
@@ -34,11 +40,14 @@ public class HazelcastUserServiceTests {
 	@Before
 	public void reset() {
 		hzInstance.getMap(HazelcastUserService.HZ_USER_KEY).clear();
+		PersonSummary adam = new PersonSummary(new Identifier("Adam"), new Identifier("DC"), Status.ACTIVE, "Adam");
+		Mockito.when(personService.findPersonSummary(new Identifier("Adam"))).thenReturn(adam);
 	}
 	
 	@Test
 	public void testUsers() {		
-//		hzUserService.createUser(new Identifier("P1"), "userA", Arrays.asList("", "", "", ""));
+		User u1 = hzUserService.createUser(new Identifier("Adam"), "adam21", List.of("USR", "PPL"));
+		
 	}
 	
 	@Test
